edit cv download

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         Building Web Apps using Angular, ASP.NET Core, SQL, Oracle.
                     </p>
                     <div class="hero-buttons">
-                        <a href="Ahmed_Mamdouh_CV_ATS_Professional.docx" class="btn btn-primary" target="_blank">
+                        <a href="Ahmed_Mamdouh_CV.docx" class="btn btn-primary" target="_blank">
                             <i class="fas fa-download"></i>
                             Download My CV
                         </a>
@@ -527,7 +527,7 @@
     </footer>
 
     <!-- Floating CV Button -->
-    <a href="ahmed-cv.pdf" class="floating-cv-btn" target="_blank" title="Download CV">
+    <a href="Ahmed_Mamdouh_CV.docx" class="floating-cv-btn" target="_blank" title="Download CV">
         <i class="fas fa-download"></i>
     </a>
 
